--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="ca">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%=BASE_URL%>logo.png"/>
+    <link rel="icon" href="<%=BASE_URL%>logo.png" />
     <!-- Fuentes que hemos usado -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
@@ -17,7 +21,6 @@
       rel="stylesheet"
     />
     <title><%= htmlWebpackPlugin.options.title %></title>
-    
   </head>
   <body>
     <noscript>
